[metadata]
name = kenexar-core
version = 1.0
author = exersalza
author_email = squidodle44@gmail.com
description = Just the Core from our Kenexar project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenexar/kenexar-core
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src