[metadata]
name = kenexar-core
version = 1.8
author = exersalza
author_email = squidodle44@gmail.com
description = This is the core element that reaches over all Kenexar projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenexar/kenexar-core
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src