[metadata]
name = kenexar-core
version = 2.1
description = This is the base package for the most Kenexar py projects.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = exersalza
url = https://github.com/kenexar/kenexar-core
project_urls =
    Docs=https://kenexar.github.io/kenexar-core/
    Source=https://github.com/kenexar/kenexar-core
    Issues=https://github.com/kenexar/kenexar-core/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
install_requires =
    mysql-connector-python
    pytz
packages = find:

[options.packages.find]
where = src
